[package]
name = "partages_web"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# Server
rocket = "0.4.2"
diesel = { version = "1.4.3", features = ["postgres"] }
# Db
r2d2 = "0.8.7"
r2d2-diesel = "1.0.0"
rocket_contrib = "0.4.2"
# Sys
dotenv = "0.15.0"
# Json (upgrade in future)
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
